# autofolio

./: .gitignore  FRONTEND_TEST_RESULTS.md  MVP.md  README.md  SCREENSHOT_TEST_RESULTS.md  TEST_SUMMARY.md  USAGE.md  austere-browser.json  chainlit.md  pyproject.toml  satisfactory-api.json  test_complete_workflow.py  test_detailed_screenshots.py  test_frontend.py  test_frontend_comprehensive.py  test_full_user_journey.py  test_realistic_user_flow.py  test_user_workflow.py  usage.md
.chainlit/: config.toml
autofolio/: __main__.py  cli.py  config.py  detector.py  git_ops.py  ingest.py  llm.py  patcher.py  preview.py  profile.py  validator.py
autofolio/web/: app.py
public/: stylesheet.css  theme.json
tests/: test_cli_integration.py  test_detector.py  test_ingest.py  test_patcher.py  test_profile.py  test_validator.py
